[package]
name = "doge-light-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["borsh"]
borsh = ["dep:borsh"]
serde = ["dep:serde", "dep:serde_with"]
bitcoin = ["dep:bitcoin", "serde"]
solprogram = ["dep:solana-program"]
sha2 = ["dep:sha2"]
std = []

[dependencies]
bytes = "1.10"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
bs58 = { version = "0.5.1", default-features = false, features = ["check", "alloc"] }
ripemd = "0.1.3"
scrypt = { version = "0.11.0", default-features = false, features = [] }
borsh = { version = "0.10.4", optional = true }
thiserror = "^1.0"
num-derive = "^0.3"
num-traits = "^0.2"
zerocopy = { git = "https://github.com/cf/zerocopy-borsh-serde", branch = "borsh-serde-v0.8.23", features = ["borsh"] }
zerocopy-derive = { git = "https://github.com/cf/zerocopy-borsh-serde", branch = "borsh-serde-v0.8.23" }

bitcoin = { git = "https://github.com/QEDProtocol/rust-dogecoin", rev = "9b52ed2ddc18c2062c741b7df7a6e70aabde3bb8", optional = true, features = [ "serde" ] }
anyhow = { version = "1.0.75", default-features = false, features = [] }

solana-program = { version = "~2.1", optional = true }

sha2 = { version = "0.10.8", optional = true }

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
bitcoin = { git = "https://github.com/QEDProtocol/rust-dogecoin", rev = "9b52ed2ddc18c2062c741b7df7a6e70aabde3bb8", features = [ "serde" ] }
rand = "0.8"
rand_core = "0.6.0"
